--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.3",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "@rneui/themed": "^4.0.0-rc.8",
     "@shopify/flash-list": "1.6.4",
+    "@solana/web3.js": "^1.95.3",
     "@supabase/supabase-js": "^2.45.4",
+    "axios": "^1.7.7",
     "expo": "~51.0.34",
-    "expo-blur": "^13.0.2",
+    "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
+    "expo-image-picker": "~15.0.7",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-secure-store": "~13.0.2",
@@ -32,6 +37,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "groq-sdk": "^0.7.0",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -40,7 +47,9 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "lottie-react-native": "6.7.0"
+    "expo-local-authentication": "~14.0.1",
+    "expo-clipboard": "~6.0.3",
+    "expo-linear-gradient": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
